kubernetes/legacy/k3s/apps/it-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
